--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
+.yellow{
+    background-color: whitesmoke;
+    width: 400px;
+    padding: 20px;
+    font-size: 17px;
+    border-radius: 5px;
+    color: black;
+    
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.blue{
+    background-color: rgb(73, 206, 161);
+    width: 400px;
+    padding: 20px;
+    font-size: 17px;
+    border-radius: 5px;
+    color: white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.grey{
+    background-color: rgb(163, 148, 62);
+    width: 400px;
+    padding: 20px;
+    font-size: 17px;
+    border-radius: 5px;
+    color: white;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.information{
+    display: flex;
+    gap: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.fa-brands{
+   font-size: 45px;
+   display: flex;
+   justify-content: flex-end;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* ejercicio 1 */
+
+.UserCard{
+    background-color: rgb(78, 78, 200);
+    width: 500px;
+    border-radius: 5px;
+    font-weight: bold;
+    color: white;
 }
+
+
+
